<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/crime_title_hint"
        android:layout_marginLeft="@dimen/button_vertical_margin"
        android:layout_marginRight="@dimen/button_vertical_margin" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_detail_label"
        style="?android:listSeparatorTextViewStyle"/>


    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_vertical_margin"
        android:layout_marginRight="@dimen/button_vertical_margin"
        android:textSize="18sp"
        android:text="@string/crime_solved_label"/>

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_vertical_margin"
        android:layout_marginRight="@dimen/button_vertical_margin"

        />

    <Button
        android:id="@+id/crime_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_vertical_margin"
        android:layout_marginRight="@dimen/button_vertical_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_suspect"
        android:layout_marginLeft="@dimen/button_vertical_margin"
        android:layout_marginRight="@dimen/button_vertical_margin"
        android:id="@+id/crime_suspect"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_crime_report"
        android:layout_marginLeft="@dimen/button_vertical_margin"
        android:layout_marginRight="@dimen/button_vertical_margin"
        android:id="@+id/crime_report"
        android:layout_gravity="center_horizontal" />


</LinearLayout>